--- a/WalkieTalkie/Base.lproj/Main.storyboard
+++ b/WalkieTalkie/Base.lproj/Main.storyboard
@@ -25,6 +25,9 @@
                                     <constraint firstAttribute="height" constant="44" id="eku-ZW-6cS"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="recordButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z5u-Lw-xib"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nRY-G6-VU3">
                                 <rect key="frame" x="20" y="44" width="374" height="754"/>
@@ -43,6 +46,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="recordButton" destination="LXG-cC-JEE" id="8AY-Ic-Pij"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
